fix/ overflow-hidden

--- a/frontend/sismics-app/src/app/globals.css
+++ b/frontend/sismics-app/src/app/globals.css
@@ -24,7 +24,7 @@ body {
   padding: 0;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
 
